--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ reconstruction/x64/
 CloudOptimization/x64/
 Kinect2Cloud/x64/
 BatchProcess/x64/
-lib/opencv
+lib/opencv/
 .svn/
 
 # Compiled Object files
