remove demo images and exe

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,12 @@ CloudOptimization/x64/
 Kinect2Cloud/x64/
 BatchProcess/x64/
 lib/opencv/
+Demo/INPUT/
+Demo/tmp/
+Demo/meshlab/
+Demo/unused/
+Demo/matlab_files/
+Demo/unused/
 .svn/
 
 # Compiled Object files
@@ -86,3 +92,9 @@ $RECYCLE.BIN/
 *.msi
 *.msm
 *.msp
+
+Demo/readme.txt
+Demo/segmentation/main_ljl_5_18.m
+Demo/segmentation/RegionGrowing_mex.mexw64
+Demo/CloudOptimization_Release.dll
+Demo/reconstruction.exe
